Fix button overflow

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,4 +9,8 @@
 
     font-size: 100%;
   }
+
+  & .mat-raised-button {
+    min-width: min-content;
+  }
 }
